test.h

typedef struct Option_File Option_File;
typedef struct Option_String Option_String;
typedef struct Option_Vec_u32 Option_Vec_u32;
typedef struct Option_Vec_u8 Option_Vec_u8;
typedef long __time_t;
typedef long __syscall_slong_t;
typedef struct timespec {
  __time_t tv_sec;
  __syscall_slong_t tv_nsec;
} timespec;
typedef union in6_addr__bindgen_ty_1 {
  uint8_t __u6_addr8[16];
  uint16_t __u6_addr16[8];
  uint32_t __u6_addr32[4];
} in6_addr__bindgen_ty_1;
typedef struct in6_addr {
  union in6_addr__bindgen_ty_1 __in6_u;
} in6_addr;
typedef long __off_t;
typedef unsigned long __dev_t;
typedef unsigned int __mode_t;
typedef __time_t time_t;
typedef __off_t off_t;
typedef struct GeoIPTag {
  struct Option_File *GeoIPDatabase;
  struct Option_String *file_path;
  struct Option_Vec_u8 cache;
  struct Option_Vec_u8 index_cache;
  struct Option_Vec_u32 databaseSegments;
  char databaseType;
  time_t mtime;
  int flags;
  off_t size;
  char record_length;
  int charset;
  int record_iter;
  int netmask;
  time_t last_mtime_check;
  off_t dyn_seg_size;
  unsigned int ext_flags;
} GeoIPTag;
typedef struct GeoIPTag GeoIP;
typedef struct GeoIPLookup {
  int netmask;
} GeoIPLookup;
typedef struct in6_addr geoipv6_t;
typedef struct GeoIPRegionTag {
  char country_code[3];
  char region[3];
} GeoIPRegionTag;
typedef struct GeoIPRegionTag GeoIPRegion;
typedef unsigned int GeoIPExtFlags;
typedef unsigned int GeoIPCharset;
typedef unsigned int GeoIPOptions;
typedef unsigned int GeoIPDBTypes;
typedef unsigned int GeoIPProxyTypes;
typedef unsigned int GeoIPNetspeedValues;
#define GeoIPExtFlags_GEOIP_TEREDO_BIT 0
#define GeoIPCharset_GEOIP_CHARSET_ISO_8859_1 0
#define GeoIPCharset_GEOIP_CHARSET_UTF8 1
#define GeoIPOptions_GEOIP_STANDARD 0
#define GeoIPOptions_GEOIP_MEMORY_CACHE 1
#define GeoIPOptions_GEOIP_CHECK_CACHE 2
#define GeoIPOptions_GEOIP_INDEX_CACHE 4
#define GeoIPOptions_GEOIP_MMAP_CACHE 8
#define GeoIPOptions_GEOIP_SILENCE 16
#define GeoIPDBTypes_GEOIP_COUNTRY_EDITION 1
#define GeoIPDBTypes_GEOIP_REGION_EDITION_REV0 7
#define GeoIPDBTypes_GEOIP_CITY_EDITION_REV0 6
#define GeoIPDBTypes_GEOIP_ORG_EDITION 5
#define GeoIPDBTypes_GEOIP_ISP_EDITION 4
#define GeoIPDBTypes_GEOIP_CITY_EDITION_REV1 2
#define GeoIPDBTypes_GEOIP_REGION_EDITION_REV1 3
#define GeoIPDBTypes_GEOIP_PROXY_EDITION 8
#define GeoIPDBTypes_GEOIP_ASNUM_EDITION 9
#define GeoIPDBTypes_GEOIP_NETSPEED_EDITION 10
#define GeoIPDBTypes_GEOIP_DOMAIN_EDITION 11
#define GeoIPDBTypes_GEOIP_COUNTRY_EDITION_V6 12
#define GeoIPDBTypes_GEOIP_LOCATIONA_EDITION 13
#define GeoIPDBTypes_GEOIP_ACCURACYRADIUS_EDITION 14
#define GeoIPDBTypes_GEOIP_CITYCONFIDENCE_EDITION 15
#define GeoIPDBTypes_GEOIP_CITYCONFIDENCEDIST_EDITION 16
#define GeoIPDBTypes_GEOIP_LARGE_COUNTRY_EDITION 17
#define GeoIPDBTypes_GEOIP_LARGE_COUNTRY_EDITION_V6 18
#define GeoIPDBTypes_GEOIP_CITYCONFIDENCEDIST_ISP_ORG_EDITION 19
#define GeoIPDBTypes_GEOIP_CCM_COUNTRY_EDITION 20
#define GeoIPDBTypes_GEOIP_ASNUM_EDITION_V6 21
#define GeoIPDBTypes_GEOIP_ISP_EDITION_V6 22
#define GeoIPDBTypes_GEOIP_ORG_EDITION_V6 23
#define GeoIPDBTypes_GEOIP_DOMAIN_EDITION_V6 24
#define GeoIPDBTypes_GEOIP_LOCATIONA_EDITION_V6 25
#define GeoIPDBTypes_GEOIP_REGISTRAR_EDITION 26
#define GeoIPDBTypes_GEOIP_REGISTRAR_EDITION_V6 27
#define GeoIPDBTypes_GEOIP_USERTYPE_EDITION 28
#define GeoIPDBTypes_GEOIP_USERTYPE_EDITION_V6 29
#define GeoIPDBTypes_GEOIP_CITY_EDITION_REV1_V6 30
#define GeoIPDBTypes_GEOIP_CITY_EDITION_REV0_V6 31
#define GeoIPDBTypes_GEOIP_NETSPEED_EDITION_REV1 32
#define GeoIPDBTypes_GEOIP_NETSPEED_EDITION_REV1_V6 33
#define GeoIPDBTypes_GEOIP_COUNTRYCONF_EDITION 34
#define GeoIPDBTypes_GEOIP_CITYCONF_EDITION 35
#define GeoIPDBTypes_GEOIP_REGIONCONF_EDITION 36
#define GeoIPDBTypes_GEOIP_POSTALCONF_EDITION 37
#define GeoIPDBTypes_GEOIP_ACCURACYRADIUS_EDITION_V6 38
#define GeoIPProxyTypes_GEOIP_ANON_PROXY 1
#define GeoIPProxyTypes_GEOIP_HTTP_X_FORWARDED_FOR_PROXY 2
#define GeoIPProxyTypes_GEOIP_HTTP_CLIENT_IP_PROXY 3
#define GeoIPNetspeedValues_GEOIP_UNKNOWN_SPEED 0
#define GeoIPNetspeedValues_GEOIP_DIALUP_SPEED 1
#define GeoIPNetspeedValues_GEOIP_CABLEDSL_SPEED 2
#define GeoIPNetspeedValues_GEOIP_CORPORATE_SPEED 3
extern int mkdir(const char *__path, __mode_t __mode);
extern int mkdirat(int __fd, const char *__path, __mode_t __mode);
extern int mknod(const char *__path, __mode_t __mode, __dev_t __dev);
extern int mknodat(int __fd, const char *__path, __mode_t __mode,
                   __dev_t __dev);
extern int mkfifo(const char *__path, __mode_t __mode);
extern int mkfifoat(int __fd, const char *__path, __mode_t __mode);
extern int utimensat(int __fd, const char *__path,
                     const struct timespec *__times, int __flags);
extern int futimens(int __fd, const struct timespec *__times);
extern void GeoIP_setup_custom_directory(char *dir);
extern GeoIP *GeoIP_open_type(int type_, int flags);
extern GeoIP *GeoIP_new(int flags);
GeoIP *GeoIP_open(const char *filename, int flags);