src/GeoIP.rs

extern "C" {
    pub fn mkdir(__path: *const ::std::ffi::c_char, __mode: __mode_t) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mkdirat(
        __fd: ::std::ffi::c_int,
        __path: *const ::std::ffi::c_char,
        __mode: __mode_t,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mknod(
        __path: *const ::std::ffi::c_char,
        __mode: __mode_t,
        __dev: __dev_t,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mknodat(
        __fd: ::std::ffi::c_int,
        __path: *const ::std::ffi::c_char,
        __mode: __mode_t,
        __dev: __dev_t,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mkfifo(__path: *const ::std::ffi::c_char, __mode: __mode_t) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn mkfifoat(
        __fd: ::std::ffi::c_int,
        __path: *const ::std::ffi::c_char,
        __mode: __mode_t,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn utimensat(
        __fd: ::std::ffi::c_int,
        __path: *const ::std::ffi::c_char,
        __times: *const timespec,
        __flags: ::std::ffi::c_int,
    ) -> ::std::ffi::c_int;
}
extern "C" {
    pub fn futimens(__fd: ::std::ffi::c_int, __times: *const timespec) -> ::std::ffi::c_int;
}
pub type geoipv6_t = in6_addr;
#[repr(C)]
// #[derive(Debug, Copy, Clone)]
pub struct GeoIPTag {
    pub cache: *mut ::std::ffi::c_uchar,
    pub index_cache: *mut ::std::ffi::c_uchar,
    pub databaseSegments: *mut ::std::ffi::c_uint,
    pub databaseType: ::std::ffi::c_char,
    pub mtime: time_t,
    pub flags: ::std::ffi::c_int,
    pub size: off_t,
    pub record_length: ::std::ffi::c_char,
    pub charset: ::std::ffi::c_int,
    pub record_iter: ::std::ffi::c_int,
    pub netmask: ::std::ffi::c_int,
    pub last_mtime_check: time_t,
    pub dyn_seg_size: off_t,
    pub ext_flags: ::std::ffi::c_uint,
    pub GeoIPDatabase: Option<File>,
    pub file_path: Option<String>,
}
pub type GeoIP = GeoIPTag;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GeoIPLookup {
    pub netmask: ::std::ffi::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GeoIPLookup"][::std::mem::size_of::<GeoIPLookup>() - 4usize];
    ["Alignment of GeoIPLookup"][::std::mem::align_of::<GeoIPLookup>() - 4usize];
    ["Offset of field: GeoIPLookup::netmask"]
        [::std::mem::offset_of!(GeoIPLookup, netmask) - 0usize];
};
pub const GeoIPExtFlags_GEOIP_TEREDO_BIT: GeoIPExtFlags = 0;
pub type GeoIPExtFlags = ::std::ffi::c_uint;
pub const GeoIPCharset_GEOIP_CHARSET_ISO_8859_1: GeoIPCharset = 0;
pub const GeoIPCharset_GEOIP_CHARSET_UTF8: GeoIPCharset = 1;
pub type GeoIPCharset = ::std::ffi::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct GeoIPRegionTag {
    pub country_code: [::std::ffi::c_char; 3usize],
    pub region: [::std::ffi::c_char; 3usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of GeoIPRegionTag"][::std::mem::size_of::<GeoIPRegionTag>() - 6usize];
    ["Alignment of GeoIPRegionTag"][::std::mem::align_of::<GeoIPRegionTag>() - 1usize];
    ["Offset of field: GeoIPRegionTag::country_code"]
        [::std::mem::offset_of!(GeoIPRegionTag, country_code) - 0usize];
    ["Offset of field: GeoIPRegionTag::region"]
        [::std::mem::offset_of!(GeoIPRegionTag, region) - 3usize];
};
pub type GeoIPRegion = GeoIPRegionTag;
pub const GeoIPOptions_GEOIP_STANDARD: GeoIPOptions = 0;
pub const GeoIPOptions_GEOIP_MEMORY_CACHE: GeoIPOptions = 1;
pub const GeoIPOptions_GEOIP_CHECK_CACHE: GeoIPOptions = 2;
pub const GeoIPOptions_GEOIP_INDEX_CACHE: GeoIPOptions = 4;
pub const GeoIPOptions_GEOIP_MMAP_CACHE: GeoIPOptions = 8;
pub const GeoIPOptions_GEOIP_SILENCE: GeoIPOptions = 16;
pub type GeoIPOptions = ::std::ffi::c_uint;
pub const GeoIPDBTypes_GEOIP_COUNTRY_EDITION: GeoIPDBTypes = 1;
pub const GeoIPDBTypes_GEOIP_REGION_EDITION_REV0: GeoIPDBTypes = 7;
pub const GeoIPDBTypes_GEOIP_CITY_EDITION_REV0: GeoIPDBTypes = 6;
pub const GeoIPDBTypes_GEOIP_ORG_EDITION: GeoIPDBTypes = 5;
pub const GeoIPDBTypes_GEOIP_ISP_EDITION: GeoIPDBTypes = 4;
pub const GeoIPDBTypes_GEOIP_CITY_EDITION_REV1: GeoIPDBTypes = 2;
pub const GeoIPDBTypes_GEOIP_REGION_EDITION_REV1: GeoIPDBTypes = 3;
pub const GeoIPDBTypes_GEOIP_PROXY_EDITION: GeoIPDBTypes = 8;
pub const GeoIPDBTypes_GEOIP_ASNUM_EDITION: GeoIPDBTypes = 9;
pub const GeoIPDBTypes_GEOIP_NETSPEED_EDITION: GeoIPDBTypes = 10;
pub const GeoIPDBTypes_GEOIP_DOMAIN_EDITION: GeoIPDBTypes = 11;
pub const GeoIPDBTypes_GEOIP_COUNTRY_EDITION_V6: GeoIPDBTypes = 12;
pub const GeoIPDBTypes_GEOIP_LOCATIONA_EDITION: GeoIPDBTypes = 13;
pub const GeoIPDBTypes_GEOIP_ACCURACYRADIUS_EDITION: GeoIPDBTypes = 14;
pub const GeoIPDBTypes_GEOIP_CITYCONFIDENCE_EDITION: GeoIPDBTypes = 15;
pub const GeoIPDBTypes_GEOIP_CITYCONFIDENCEDIST_EDITION: GeoIPDBTypes = 16;
pub const GeoIPDBTypes_GEOIP_LARGE_COUNTRY_EDITION: GeoIPDBTypes = 17;
pub const GeoIPDBTypes_GEOIP_LARGE_COUNTRY_EDITION_V6: GeoIPDBTypes = 18;
pub const GeoIPDBTypes_GEOIP_CITYCONFIDENCEDIST_ISP_ORG_EDITION: GeoIPDBTypes = 19;
pub const GeoIPDBTypes_GEOIP_CCM_COUNTRY_EDITION: GeoIPDBTypes = 20;
pub const GeoIPDBTypes_GEOIP_ASNUM_EDITION_V6: GeoIPDBTypes = 21;
pub const GeoIPDBTypes_GEOIP_ISP_EDITION_V6: GeoIPDBTypes = 22;
pub const GeoIPDBTypes_GEOIP_ORG_EDITION_V6: GeoIPDBTypes = 23;
pub const GeoIPDBTypes_GEOIP_DOMAIN_EDITION_V6: GeoIPDBTypes = 24;
pub const GeoIPDBTypes_GEOIP_LOCATIONA_EDITION_V6: GeoIPDBTypes = 25;
pub const GeoIPDBTypes_GEOIP_REGISTRAR_EDITION: GeoIPDBTypes = 26;
pub const GeoIPDBTypes_GEOIP_REGISTRAR_EDITION_V6: GeoIPDBTypes = 27;
pub const GeoIPDBTypes_GEOIP_USERTYPE_EDITION: GeoIPDBTypes = 28;
pub const GeoIPDBTypes_GEOIP_USERTYPE_EDITION_V6: GeoIPDBTypes = 29;
pub const GeoIPDBTypes_GEOIP_CITY_EDITION_REV1_V6: GeoIPDBTypes = 30;
pub const GeoIPDBTypes_GEOIP_CITY_EDITION_REV0_V6: GeoIPDBTypes = 31;
pub const GeoIPDBTypes_GEOIP_NETSPEED_EDITION_REV1: GeoIPDBTypes = 32;
pub const GeoIPDBTypes_GEOIP_NETSPEED_EDITION_REV1_V6: GeoIPDBTypes = 33;
pub const GeoIPDBTypes_GEOIP_COUNTRYCONF_EDITION: GeoIPDBTypes = 34;
pub const GeoIPDBTypes_GEOIP_CITYCONF_EDITION: GeoIPDBTypes = 35;
pub const GeoIPDBTypes_GEOIP_REGIONCONF_EDITION: GeoIPDBTypes = 36;
pub const GeoIPDBTypes_GEOIP_POSTALCONF_EDITION: GeoIPDBTypes = 37;
pub const GeoIPDBTypes_GEOIP_ACCURACYRADIUS_EDITION_V6: GeoIPDBTypes = 38;
pub type GeoIPDBTypes = ::std::ffi::c_uint;
pub const GeoIPProxyTypes_GEOIP_ANON_PROXY: GeoIPProxyTypes = 1;
pub const GeoIPProxyTypes_GEOIP_HTTP_X_FORWARDED_FOR_PROXY: GeoIPProxyTypes = 2;
pub const GeoIPProxyTypes_GEOIP_HTTP_CLIENT_IP_PROXY: GeoIPProxyTypes = 3;
pub type GeoIPProxyTypes = ::std::ffi::c_uint;
pub const GeoIPNetspeedValues_GEOIP_UNKNOWN_SPEED: GeoIPNetspeedValues = 0;
pub const GeoIPNetspeedValues_GEOIP_DIALUP_SPEED: GeoIPNetspeedValues = 1;
pub const GeoIPNetspeedValues_GEOIP_CABLEDSL_SPEED: GeoIPNetspeedValues = 2;
pub const GeoIPNetspeedValues_GEOIP_CORPORATE_SPEED: GeoIPNetspeedValues = 3;
pub type GeoIPNetspeedValues = ::std::ffi::c_uint;
extern "C" {
    pub static mut GeoIPDBFileName: *mut *mut ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIPDBDescription: [*const ::std::ffi::c_char; 39usize];
}
extern "C" {
    pub static mut GeoIPCountryDBFileName: *const ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIPRegionDBFileName: *const ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIPCityDBFileName: *const ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIPOrgDBFileName: *const ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIPISPDBFileName: *const ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIPLocationADBFileName: *const ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIPAccuracyRadiusFileName: *const ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIPCityConfidenceFileName: *const ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIP_custom_directory: *mut ::std::ffi::c_char;
}
extern "C" {
    pub static mut GeoIP_country_code: [[::std::ffi::c_char; 3usize]; 256usize];
}
extern "C" {
    pub static mut GeoIP_country_code3: [[::std::ffi::c_char; 4usize]; 256usize];
}
extern "C" {
    pub static mut GeoIP_country_name: [*const ::std::ffi::c_char; 256usize];
}
extern "C" {
    pub static mut GeoIP_utf8_country_name: [*const ::std::ffi::c_char; 256usize];
}
extern "C" {
    pub static mut GeoIP_country_continent: [[::std::ffi::c_char; 3usize]; 256usize];
}
extern "C" {
    pub fn GeoIP_setup_custom_directory(dir: *mut ::std::ffi::c_char);
}
extern "C" {
    pub fn GeoIP_open_type(type_: ::std::ffi::c_int, flags: ::std::ffi::c_int) -> *mut GeoIP;
}
extern "C" {
    pub fn GeoIP_new(flags: ::std::ffi::c_int) -> *mut GeoIP;
}
#[no_mangle]
extern "C" fn GeoIP_open(
    filename: *const ::std::ffi::c_char,
    flags: ::std::ffi::c_int,
) -> *mut GeoIP {
    println!("Rust calling GeoIP_open");
    if filename.is_null() {
        return ptr::null_mut();
    }

    let filename_cstr = unsafe { CStr::from_ptr(filename) };

    let filename_str = match filename_cstr.to_str() {
        Ok(s) => s,
        Err(_) => return ptr::null_mut(),
    };

    let mut file = match File::open(filename_str) {
        Ok(f) => f,
        Err(_) => return ptr::null_mut(),
    };

    let file_metadata = match File::metadata(&file) {
        Ok(m) => m,
        Err(_) => return ptr::null_mut(),
    };

    let file_size = file_metadata.len();

    let mut gi = GeoIP {
        cache: ptr::null_mut(),
        index_cache: ptr::null_mut(),
        databaseSegments: ptr::null_mut(),
        databaseType: 0,
        mtime: file_metadata.st_mtime(),
        flags: 1,
        size: file_size as i64,
        record_length: 0,
        charset: 0,
        record_iter: 0,
        netmask: 0,
        last_mtime_check: 0,
        dyn_seg_size: 0,
        ext_flags: 0,
        GeoIPDatabase: None,
        file_path: Some(filename_str.to_string()),
    };

    println!(
        "Rust code: print GeoIPTag First file field: {file:#?} and mtime {} at addr: {:#?}",
        gi.mtime,
        addr_of!(gi.mtime)
    );

    if (flags as u32 & (GeoIPOptions_GEOIP_MEMORY_CACHE | GeoIPOptions_GEOIP_MMAP_CACHE)) != 0 {
        if flags as u32 & GeoIPOptions_GEOIP_MMAP_CACHE != 0 {
            #[cfg(unix)]
            {
                let mut cache = match unsafe { MmapMut::map_mut(&file) } {
                    Ok(c) => c,
                    Err(_) => return ptr::null_mut(),
                };
                gi.cache = cache.as_mut_ptr();
            }
        } else {
            let mut cache = vec![0u8; file_size as usize];
            if let Err(_) = file.read_exact(&mut cache) {
                return ptr::null_mut();
            }
            gi.cache = cache.as_mut_ptr();
        }
    } else {
        if flags as u32 & GeoIPOptions_GEOIP_CHECK_CACHE != 0 {
            let file_metadata = match File::metadata(&file) {
                Ok(m) => m,
                Err(_) => return ptr::null_mut(),
            };
            gi.mtime = file_metadata.st_mtime();
        }
        gi.cache = ptr::null_mut();
    }

    gi.flags = flags;
    gi.charset = GeoIPCharset_GEOIP_CHARSET_ISO_8859_1 as i32;
    gi.ext_flags = 1u32 << GeoIPExtFlags_GEOIP_TEREDO_BIT;

    println!("Rust code: ext flags is: {}", gi.ext_flags);

    gi.GeoIPDatabase = Some(file);

    ptr::from_mut(&mut gi)
}

const STRUCTURE_INFO_MAX_SIZE: usize = 20;
const STATE_BEGIN_REV0: usize = 16700000;
const STATE_BEGIN_REV1: usize = 16000000;

fn pread(file: &mut File, buf: &mut [u8], count: u64, offset: u64) -> io::Result<usize> {
    if let Ok(seek_offset) = file.seek(SeekFrom::Start(offset)) {
        if seek_offset == offset {
            return file.take(count).read(buf);
        }
    }

    Err(io::Error::new(io::ErrorKind::Other, "Seek failed"))
}
